The Stump jei recipe now renderes a fluid now

--- a/src/main/resources/assets/stellar_sorcery/lang/en_us.json
+++ b/src/main/resources/assets/stellar_sorcery/lang/en_us.json
@@ -78,6 +78,9 @@
   "entity.stellar_sorcery.mob": "Mob",
 
 
+  "fluid_type.stellar_sorcery.noctilume": "Noctilume",
+
+
   "item.stellar_sorcery.bottle_essence_of": "Essence of",
   "item.stellar_sorcery.bottle_essence_of_nature": "Essence of Nature",
   "item.stellar_sorcery.bottle_essence_of_night_bloom": "Essence of Night Bloom",
