Start of blue stone
and textures like twig.png, skarp_aurora.png and more

--- a/src/main/resources/assets/stellar_sorcery/lang/en_us.json
+++ b/src/main/resources/assets/stellar_sorcery/lang/en_us.json
@@ -30,6 +30,8 @@
   "item.stellar_sorcery.noctilume_bucket": "Noctilume Bucket",
   "item.stellar_sorcery.root": "Root",
 
+  "item.stellar_sorcery.bluestone_dust": "Bluestone Dust",
+
   "item.stellar_sorcery.soft_clay_jar": "Soft Clay Jar",
   "item.stellar_sorcery.water_clay_jar": "Water Clay Jar",
   "item.stellar_sorcery.shadow_clay_jar": "Shadow Clay Jar",
