Soul candle and Chalk

--- a/src/main/resources/assets/stellar_sorcery/lang/en_us.json
+++ b/src/main/resources/assets/stellar_sorcery/lang/en_us.json
@@ -45,6 +45,11 @@
   "item.stellar_sorcery.wind_clay_jar": "Wind Clay Jar",
   "item.stellar_sorcery.extracter_clay_jar": "Extracter Clay Jar",
 
+  "item.stellar_sorcery.white_chalk_stick": "White Chalk Stick",
+
+
+  "block.stellar_sorcery.white_chalk": "White Chalk",
+  "block.stellar_sorcery.soul_candle": "Soul Candle",
 
   "block.stellar_sorcery.fritillaria_meleagris_crop": "Fritillaria Meleagris Crop",
 
