--- a/src/main/resources/assets/stellar_sorcery/lang/en_us.json
+++ b/src/main/resources/assets/stellar_sorcery/lang/en_us.json
@@ -53,6 +53,7 @@
   "item.stellar_sorcery.extracter_clay_jar": "Extracter Clay Jar",
 
   "item.stellar_sorcery.white_chalk_stick": "White Chalk Stick",
+  "item.stellar_sorcery.chalk_canister": "Chalk Canister",
 
 
   "block.stellar_sorcery.white_chalk": "White Chalk",
