Chalk Canister can place logic. Wraith Cloak start

--- a/src/main/resources/assets/stellar_sorcery/lang/en_us.json
+++ b/src/main/resources/assets/stellar_sorcery/lang/en_us.json
@@ -51,9 +51,10 @@
   "item.stellar_sorcery.twig_clay_jar": "Twig Clay Jar",
   "item.stellar_sorcery.wind_clay_jar": "Wind Clay Jar",
   "item.stellar_sorcery.extracter_clay_jar": "Extracter Clay Jar",
+  "item.stellar_sorcery.wraith_cloak": "Wraith Cloak",
 
-  "item.stellar_sorcery.white_chalk_stick": "White Chalk Stick",
   "item.stellar_sorcery.chalk_canister": "Chalk Canister",
+  "item.stellar_sorcery.white_chalk_stick": "White Chalk Stick",
 
 
   "block.stellar_sorcery.white_chalk": "White Chalk",
