--- a/src/main/resources/assets/stellar_sorcery/lang/en_us.json
+++ b/src/main/resources/assets/stellar_sorcery/lang/en_us.json
@@ -17,6 +17,8 @@
   "tooltip.stellar_sorcery.with": " with ",
   "tooltip.stellar_sorcery.amulet": "Amulet",
 
+  "item.stellar_sorcery.codex_arcanum": "Codex Arcanum",
+
   "item.stellar_sorcery.empty_essence_bottle": "Empty Essence Bottle",
   "item.stellar_sorcery.empty_essence_amulet": "Empty Essence Amulet",
 
