-Category's now have the right name and icon. -Category's now has a start on tiered pages. -Category's now open to the entry and not just make a new one -Codex now works with JEI -Codex tier 1 now has a recipe

--- a/src/main/resources/assets/stellar_sorcery/lang/en_us.json
+++ b/src/main/resources/assets/stellar_sorcery/lang/en_us.json
@@ -108,6 +108,10 @@
   "key.category.stellar_sorcery": "Stellar Sorcery Keybinds",
   "key.stellar_sorcery.open_codex_arcanum": "Open Codex Arcanum",
 
+  "codex_arcanum.stellar_sorcery.misc": "Misc",
+  "codex_arcanum.stellar_sorcery.mobs": "Mobs",
+  "codex_arcanum.stellar_sorcery.rituals": "Rituals",
+
   "entity.stellar_sorcery.mob": "Mob",
 
 
